<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog"
    android:paddingHorizontal="20dp"
    android:paddingVertical="14dp">

    <whiz.sspark.library.view.general.SSparkTextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/school_record_evaluation_title"
        android:textColor="@color/textBasePrimaryColor"
        android:textSize="17dp"
        app:layout_constraintEnd_toStartOf="@+id/ivClose"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:ssparkFont="bold" />

    <ImageView
        android:id="@+id/ivClose"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_cancel" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <whiz.sspark.library.view.general.SSparkTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/school_record_beginning_text"
                android:textColor="@color/textBasePrimaryColor"
                android:textSize="17dp"
                app:ssparkFont="bold" />

            <whiz.sspark.library.view.general.SSparkTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/school_record_beginning_description_text"
                android:textColor="@color/textBaseThirdColor"
                android:textSize="13dp"
                app:ssparkFont="regular" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <whiz.sspark.library.view.general.SSparkTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/school_record_developing_text"
                android:textColor="@color/textBasePrimaryColor"
                android:textSize="17dp"
                app:ssparkFont="bold" />

            <whiz.sspark.library.view.general.SSparkTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/school_record_developing_description_text"
                android:textColor="@color/textBaseThirdColor"
                android:textSize="13dp"
                app:ssparkFont="regular" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <whiz.sspark.library.view.general.SSparkTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/school_record_proficient_text"
                android:textColor="@color/textBasePrimaryColor"
                android:textSize="17dp"
                app:ssparkFont="bold" />

            <whiz.sspark.library.view.general.SSparkTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/school_record_proficient_description_text"
                android:textColor="@color/textBaseThirdColor"
                android:textSize="13dp"
                app:ssparkFont="regular" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <whiz.sspark.library.view.general.SSparkTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/school_record_advance_text"
                android:textColor="@color/textBasePrimaryColor"
                android:textSize="17dp"
                app:ssparkFont="bold" />

            <whiz.sspark.library.view.general.SSparkTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/school_record_advance_description_text"
                android:textColor="@color/textBaseThirdColor"
                android:textSize="13dp"
                app:ssparkFont="regular" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>